# prettyless

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: trees.rs
examples/: colored.rs  trees.rs
src/: alloc.rs  builder.rs  doc.rs  lib.rs  render.rs  text.rs  visitor.rs
src/render/: fit.rs  write.rs
tests/: contextual.rs  doc.rs  macros.rs  perf.rs  render.rs
