[package]
name = "prettyless"
version = "0.1.0"
authors = ["QuadnucYard <quadnucyard@gmail.com>"]
description = "Wadler-style pretty-printing combinators in Rust with more features."
documentation = "https://docs.rs/prettyless/"
keywords = ["console", "functional", "pretty-printing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/typstyle-rs/prettyless"
edition = "2021"

[dependencies]
# The newer versions of arrayvec are larger due to forced u32 lengths, would need to drop down Smalltext to 16 bytes
# to not see any size increase so I'd rather stick with the older version for now
arrayvec = "0.5"
typed-arena = "2.0.0"
unicode-width = "0.2"

[dev-dependencies]
criterion = "0.6"
difference = "2"
expect-test = "1"
tempfile = "3.1.0"

[[example]]
name = "trees"

[[bench]]
name = "trees"
harness = false
